Fix article header bottom border for collapsed articles (issue #337)

--- a/article-style.css
+++ b/article-style.css
@@ -35,7 +35,7 @@ pre
 .gddictname
 {
   border: 1px dotted black; padding: 0.2em; padding-left: 0.5em;
-  margin-top: 1.2em; margin-bottom: 0.1em; font-weight: bold; font-size: 14px;
+  margin-top: 1.2em; margin-bottom: 9px; font-weight: bold; font-size: 14px;
   /*background: #ffffdd;*/
 }
 
